--- a/Plugin-Subdivider/subdividerControls.ui
+++ b/Plugin-Subdivider/subdividerControls.ui
@@ -33,75 +33,160 @@
     </layout>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
-     <item>
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>Method:</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <layout class="QVBoxLayout" name="verticalLayout">
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <widget class="QRadioButton" name="loop_radioButton">
-           <property name="toolTip">
-            <string>C. T. Loop, &quot;Smooth Subdivision Surfaces Based on Triangles&quot;,
+    <widget class="QGroupBox" name="groupBox">
+     <property name="title">
+      <string>Uniform Subdivision</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>Method:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <layout class="QVBoxLayout" name="verticalLayout">
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout">
+            <item>
+             <widget class="QRadioButton" name="loop_radioButton">
+              <property name="toolTip">
+               <string>C. T. Loop, &quot;Smooth Subdivision Surfaces Based on Triangles&quot;,
 M.S. Thesis, Department of Mathematics, University of Utah, August 1987.</string>
-           </property>
-           <property name="text">
-            <string>Loop</string>
-           </property>
-           <property name="checked">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-       <item>
-        <widget class="QRadioButton" name="sqrt3_radioButton">
-         <property name="toolTip">
-          <string>L. Kobbelt, &lt;a href=&quot;http://www-i8.informatik.rwth-aachen.de/publications/downloads/sqrt3.pdf&quot;&gt;&quot;Sqrt(3) subdivision&quot;&lt;/a&gt;, Proceedings of SIGGRAPH 2000.</string>
-         </property>
-         <property name="text">
-          <string>Sqrt3</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QRadioButton" name="LabsikGreiner_radioButton">
-         <property name="toolTip">
-          <string>Interpolating Labsik Greiner Subdivider as described in &quot;interpolating sqrt(3) subdivision&quot; Labsik &amp; Greiner, 2000</string>
-         </property>
-         <property name="text">
-          <string>Interpolating Sqrt3</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QRadioButton" name="modifiedButterfly_radioButton">
-         <property name="toolTip">
-          <string>The modified butterfly scheme of Denis Zorin, Peter Schröder and Wim Sweldens, 
+              </property>
+              <property name="text">
+               <string>Loop</string>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="sqrt3_radioButton">
+            <property name="toolTip">
+             <string>L. Kobbelt, &lt;a href=&quot;http://www-i8.informatik.rwth-aachen.de/publications/downloads/sqrt3.pdf&quot;&gt;&quot;Sqrt(3) subdivision&quot;&lt;/a&gt;, Proceedings of SIGGRAPH 2000.</string>
+            </property>
+            <property name="text">
+             <string>Sqrt3</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="LabsikGreiner_radioButton">
+            <property name="toolTip">
+             <string>Interpolating Labsik Greiner Subdivider as described in &quot;interpolating sqrt(3) subdivision&quot; Labsik &amp; Greiner, 2000</string>
+            </property>
+            <property name="text">
+             <string>Interpolating Sqrt3</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="modifiedButterfly_radioButton">
+            <property name="toolTip">
+             <string>The modified butterfly scheme of Denis Zorin, Peter Schröder and Wim Sweldens, 
 ``Interpolating subdivision for meshes with arbitrary topology,'' in Proceedings 
 of SIGGRAPH 1996, ACM SIGGRAPH, 1996, pp. 189-192.</string>
-         </property>
-         <property name="text">
-          <string>Modified Butterfly</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-    </layout>
+            </property>
+            <property name="text">
+             <string>Modified Butterfly</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_4">
+        <item>
+         <spacer name="horizontalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QToolButton" name="subdivide_uniform_toolButton">
+          <property name="text">
+           <string>Subdivide</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
    </item>
    <item>
-    <widget class="QToolButton" name="subdivide_toolButton">
-     <property name="text">
-      <string>Subdivide</string>
+    <widget class="QGroupBox" name="groupBox_2">
+     <property name="title">
+      <string>Adaptive Subdivision</string>
      </property>
+     <layout class="QVBoxLayout" name="verticalLayout_4">
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_5">
+        <item>
+         <spacer name="horizontalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QToolButton" name="subdivide__adaptive_toolButton">
+          <property name="text">
+           <string>Subdivide</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_4">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </item>
+     </layout>
     </widget>
    </item>
    <item>
