--- a/Plugin-TextureControl/QwtFunctionPlotBase.ui
+++ b/Plugin-TextureControl/QwtFunctionPlotBase.ui
@@ -1,10 +1,11 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>QwtFunctionPlotBase</class>
- <widget class="QWidget" name="QwtFunctionPlotBase" >
-  <property name="windowModality" >
+ <widget class="QWidget" name="QwtFunctionPlotBase">
+  <property name="windowModality">
    <enum>Qt::NonModal</enum>
   </property>
-  <property name="geometry" >
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -12,42 +13,42 @@
     <height>474</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Function Plot</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout" >
+  <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
-    <widget class="QwtPlot" name="qwtPlot" />
+    <widget class="QwtPlot" name="qwtPlot"/>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout" >
+    <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QPushButton" name="zommIn" >
-       <property name="text" >
+      <widget class="QPushButton" name="zoomInButton">
+       <property name="text">
         <string>+</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="zoomOut" >
-       <property name="text" >
+      <widget class="QPushButton" name="zoomOutButton">
+       <property name="text">
         <string>-</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="clamp" >
-       <property name="text" >
+      <widget class="QPushButton" name="clampButton">
+       <property name="text">
         <string>C</string>
        </property>
       </widget>
      </item>
      <item>
-      <spacer name="verticalSpacer" >
-       <property name="orientation" >
+      <spacer name="verticalSpacer">
+       <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
-       <property name="sizeHint" stdset="0" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
          <height>40</height>
@@ -59,7 +60,7 @@
    </item>
   </layout>
  </widget>
- <layoutdefault spacing="6" margin="11" />
+ <layoutdefault spacing="6" margin="11"/>
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
  <customwidgets>
   <customwidget>
